css/style.css
/* TODO: IMPORT FONT */

:root {
	--primary-color: hsl(210, 29%, 22%);
	--secondary-color: rgb(226, 191, 31);
	--white: #f2f2f2;
}

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 62.5%;
}

body {
	font-family: 'Roboto', sans-serif;
}

.line-1, .line-2, .line-3 {
	width: 35px;
	height: 5px;
	background-color: var(--white);
	margin: 3px 0;
	transition: 0.4s;
 }
 
/* Toggle class to  change the state of hambuger icon cross*/
 .toggle .line-1 {
	transform: translateY(12px) rotate(135deg);
 }
 
 .toggle .line-2 {opacity: 0;}
 
 .toggle .line-3 {

	transform: translateY(-10px) rotate(-135deg);
 }

.hamburger {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-end;
	padding-right: 40px;
	cursor: pointer;
}



.name {
	font-size: 2.2rem;
}

ul {
	list-style: none;
}

ul li {
	padding: 1rem 0;
}
ul li a {
	text-decoration: none;
	color: var(--white);
	font-size: 2rem;
}
.social-icon ul {
	display: flex;
	justify-content: center;
}
.social-icon ul svg {
	display: flex;
	justify-content: center;
	width: 1.7rem;
	fill: var(--primary-color);
}

.social-icon li {
	border-radius: 50%;
	background-color: var(--white);
	color: var(--primary-color);
	width: 3rem;
	margin: 5rem 1rem;
	height: 3rem;
	font-size: 1.8rem;
	display: flex;
	justify-content: center;
	align-items: center;
}

.social-icon a {
	text-decoration: none;
}

.header {
	background-color: var(--primary-color);
	width: 100%;
	height: 8vh;
}

.header .hamburger{
	height: 8vh;
}

.big-nav {
	text-align: center;
	color: var(--white);
}

.toggle{
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	background-color: hsla(210, 29%, 22%, 0.8);
} 


header .img-container {
	display: flex;
	justify-content: center;
}


header .img-container > img {
	margin-top: 4rem;
	margin-bottom: 1rem;
	border-radius: 50%;
	width: 14rem;
	height: 13rem;
	border: 3px solid var(--white);
}

.big-nav > h1 {
	margin-bottom: 3rem;
}

.social-icon {
	opacity: 0.6;
}


/*Utility classes*/

.center {
	text-align: center;
}

.right {
	text-align: right;
}

.left {
	text-align: left;
}

/* Main section starts from here */

main {
	font-size: 2rem;
}

#about {
	background: url('../img/Joshua\ Folorunsho\ 1.jpg');
	height: 60vh;
	width: 100%;
	background-size:cover;
	background-position: center center;
	background-repeat: no-repeat;
	position: relative;
	color: #fff;
}

#about::after {
	display: block;
	content: "";
	width: 100%;
	height: 100%;
   background-image: linear-gradient(to right, hsla(210, 29%, 22%, 0.5), #333);
	position: absolute;
	top: 0;
	left: 0;
	opacity: .9;
	z-index: 1;
}

#about > * {
	position: relative;
	z-index: 10;
}
#about .info {
	display: flex;
	height: 50vh;
	justify-content: center;
	align-items: center;
	text-align: center;
}

#about .info p:nth-child(1){
	font-size: 1.4rem;
	margin-bottom: 1rem;
}
#about .info p:nth-child(2){
	font-size: 2.5rem;
}



@media only screen and (min-width: 768px) {
	.container .header {
		width: 300px;
		height: 100%;
		position: fixed;
		overflow: auto;
		padding: 20px;
	}

	.container .header .hamburger {
		display: none;
	}

	header .img-container > img {
		margin-top: 6rem;
		margin-bottom: 2rem;
		width: 17rem;
		height: 15.6rem;
	}
	.big-nav > h1 {
		margin-bottom: 5rem;
	}
	
	.big-nav {
		display: block !important;
	}

	ul li a:hover {
		color: var(--secondary-color);
		font-weight: 700;
	}

	main {
		margin-left: 300px;
	}

}

